--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -47,7 +47,7 @@
  <table cellpadding="0" cellspacing="0" border="0" align="center" >
  <tr>
  <td width="200" valign="top" ><img class="image_fix"
- src="http://meadowlarktravel.com/email/logo.png"
+  src = "piggy.png"
  alt="Meadowlark Travel" title="Meadowlark Travel"
  width="180" height="220" /></td>
  </tr>
