part of my revision. changes were made

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -15,6 +15,10 @@
     <aside><b>This is an aside bar</b></aside>
 {{/section}}
 
+{{#section 'footer'}}
+            <footer>This is a footer</footer>
+{{/section}}
+
 <h2>Sign up for our newsletter to receive news and specials! </h2>
 <form class="form-horizontal" role="form" type="hidden" action="/process?form=newsletter" method="POST"  >
  <input type="hidden" name="referrer">
