--- a/views/partials/weather.handlebars
+++ b/views/partials/weather.handlebars
@@ -1,5 +1,5 @@
 <div class="weatherWidget" >
-    {{#each res.locals.locations}}
+    {{#each partials.weather.locations}}
          <div class="location" >
                 <h3>{{name}}</h3>
                 <a href="{{forecastUrl}}" >
